<resources xmlns:tools="http://schemas.android.com/tools" xmlns:link="http://schemas.android.com/apk/res-auto" tools:ignore="TypographyEllipsis">
    <string name="app_name">Geeks Job</string>
    <string name="answer_one">Answer 1</string>
    <string name="answer_two">Answer 2</string>
    <string name="answer_three">Answer 3</string>
    <string name="answer_four">Answer 4</string>
    <string name="leave">Leave</string>
    <string name="previous">&lt;&lt; Prev</string>
    <string name="next">Next &gt;&gt;</string>
    <string name="pass">Pass</string>
    <string name="questionVIew">Question goes here!</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="adView">Ad Goes here!</string>
    <string name="login">Login</string>
    <string name="hint">Hint</string>
    <string name="google_login">Google Login</string>
    <string name="exchange">Exchange</string>
    <string name="privacy">Privacy Policy</string>
    <string name="exchange_policy">Exchange Policy</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="premium">Premium</string>
    <string name="community">Community</string>
    <string name="share">Share</string>
    <string name="group">Community Help</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="faq">FAQ</string>
    <string name="notice_board">Notice Board</string>
    <string name="profile">Profile</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="company_name">Defender Studio</string>
    <string name="competition">Competition</string>
    <string name="quiz">Quiz</string>
    <string name="leader_board">Leader Board</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="curriculum">Curriculum</string>
    <string name="history">History</string>
    <string name="iot">IOT</string>
    <string name="religion">Religion</string>
    <string name="sports">Sports</string>
    <string name="movies">Movies</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="not_registered">Are you not registered?</string>
    <string name="already_registered">Already registered?</string>
    <string name="not_applicable">N/A</string>
    <string name="profile_name">Name: </string>
    <string name="profile_email">Email: </string>
    <string name="total_earning">Total Earned: (Points)</string>
    <string name="answered_question">Quiz Completed: </string>
    <string name="correct_answer">Correct Answer: </string>
    <string name="wrong_answer">Wrong Answer: </string>
    <string name="browser">Browser</string>
    <string name="initial_number">0</string>
    <string name="topic_name">Topic Name</string>
    <string name="fifty_fifty">50/50</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="science">Science</string>
    <string name="science_and_history">Science &amp; History</string>
    <string name="movies_and_sports">Movies &amp; Sports</string>
    <string name="economy">Economy</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="bkash">Bkash Account...</string>
    <string name="paypal">Paypal Email...</string>
    <string name="ten_thousand">10000</string>
    <string name="twenty_thousand">20000</string>
    <string name="fifty_thousand">50000</string>
    <string name="points_Info">You have :</string>
    <string name="reward">Rewards</string>
    <string name="chance">Chances left: </string>
    <string name="watch_ad">Watch</string>
    <string name="community_group">Community Group</string>
    <string name="note_rewards">Note: You can watch 20 ads per day and after
        that you\'ll have 24 hour cool down.</string>
    <string name="facebook_link">Link: <a href="https://www.facebook.com/groups/476830953798096/">Facebook</a></string>
    <string name="telegram_link">Link: <a href="https://t.me/geeksjobofficial">Telegram</a></string>
    <string name="youtube_link">Link: <a href="https://www.youtube.com/watch?v=JLj08-wiXjA">Youtube</a></string>
    <string name="group_chat">Group Chat</string>
    <string name="group_chat_text">You can join our facebook and telegram
        group for more information or any kind of help you need. You can contact us by using these links. We\'ll be more than happy to help you!
    </string>
    <string name="tail_text"><br/><br/>Both link provides
            direct link to our official group. If you have any kind of learning problem, like how to use this application, then you can watch video from this following link:
            <br/><br/><br/><br/></string>
    <string name="points">Points:</string>
    <string name="userName">Name:</string>
    <string name="twenty">20</string>
    <string name="zero">0</string>
    <string name="timer">00:00</string>
    <string name="reward_Button">Reward</string>
<string name="and_symbol">&amp;</string>
    <string name="go_back">Go Back</string>
    <string name="select_one_or_both"><u>Select one or both method</u></string>
<string name="no_connection">Hmm. No Internet connection.
    Please connect to the internet and try again!</string>
    <string-array name="question_title">
        <item>Curriculum</item>
        <item>Religion</item>
        <item>Sports</item>
        <item>Movies</item>
        <item>Science</item>
        <item>History</item>
        <item>IOT</item>
    </string-array>
    <string-array name="question_description">
        <item>Curriculum section</item>
        <item>Religion section</item>
        <item>Sports section</item>
        <item>Movies section</item>
        <item>Science section</item>
        <item>History section</item>
        <item>IOT section</item>
    </string-array>
    <string name="faq_initial">
        <b>Before you begin, please note that every section of "Rewards" will give you an extra
            scope to earn more points. So it is highly recommended to use them more often!</b>
    </string>
<string name="faq_first_question">
    <b>What is the use of Points?</b>
</string>
    <string name="faq_first_answer">
        <b> <u>Answer :</u></b> Points are must for being in the top position of the <b>"Leaderboard"</b>. If you are
        able to reach one of the top positions, you\'ll be able to redeem points into real money.
        But you must have at least
        <b>10000 points</b> to be eligible for one of the <b>"Leaderboard"</b> positions <b>(Minimum requirement)</b>
</string>
    <string name="faq_second_question">
    <b>What does "Rewards" section do?</b>
</string>
    <string name="faq_second_answer">
        <b> <u>Answer :</u></b> If you answer quiz, you\'ll get only 10 points for each answer. But if you go to <b>"Rewards"</b>
        section and watch ads (only 20), you\'ll get 50 points for each. That means a total of <b>1000 Points</b> which is quite a big deal.
        <p/>If you don\'t want to use it
        you\'re welcome. But if other users use that efficiently, they might get to the top position way faster than you.
        <p/>But note that you\'ll get only 20 chances.
        After that there will be a <b>8 hours</b> cool down. But in the mean time you can still answer quiz to earn points.
</string>
    <string name="faq_third_question">
        <b>How does "Leaderboard" works?</b>
    </string>
    <string name="faq_third_answer">
        <b> <u>Answer :</u></b> Top Three (5) users (will increase if participants increases) from each
        10 days of a month will get the cash prize (Note: They must have at least 10000 coins to withdraw).
    </string>
    <string name="faq_fourth_question">
        <b>What does "Profile" section do?</b>
    </string>
    <string name="faq_fourth_answer">
        <b><u>Answer: </u></b>You\'ll find all the answered question number and earned points in "Profile".
        You\'ll also get your Login information like username, email and profile photo.
    </string>
    <string name="faq_fifth_question">
        <b>How does "Exchange" works?</b>
    </string>
    <string name="faq_fifth_answer">
        <b><u>Answer: </u></b>If you become one of the top Three (5) (will increase if participants increases)
        users, you will be able to withdraw money by exchanging your coins which will be given only when you are able to
        reach one of the top positions.
        <p/>If you are from Bangladesh,
        you\'ll be able to withdraw money using \"Bkash\" &amp; \"Rocket\".
        <p/>But if you\'re from other countries, you can withdraw using \"Paypal\".
        If you still get any problem, you can join our facebook group and ask for help. You\'ll be notified in not more than one hour.
    </string>
    <string name="faq_sixth_question">
        <b>How does "Share" works?</b>
    </string>
    <string name="faq_sixth_answer">
        <b><u>Answer: </u></b>You can share Geeks Job. You\'ll not get anything directly. But if you\'re a winner,
        then you should share more. Because the more the users, the more the prize, the more you\'ll earn.
        So don\'t be a selfish. Because sharing is caring.
    </string>
    <string name="faq_seventh_question">
        <b>How does "Quiz" section works?</b>
    </string>
    <string name="faq_seventh_answer">
        <b><u>Answer: </u></b>You can answer as many as Quiz you want. You\'ll get 10 points for completing each quiz.
        You can answer quiz from the Movies and sports or Science and History, any section you like.
        But note that Religion and Curriculum is still under development. Until then, you can use other sections.

        <p/>If you answer a wrong question, you\'ll get a penalty for about 10 seconds. But no points will be deducted from your account.
        It\'s an won and won situation.

        You won\'t be able to pass or skip any question.
        <b><p/>Please note that: </b> If you leave application for any reason, you\'ll have to start again.
    </string>
    <string name="faq_eighth_question">
        <b>How does "Reward" in "Quiz" section works?</b>
    </string>
    <string name="faq_eighth_answer">
        <b><u>Answer: </u></b>The \"Reward\" in the quiz section is for additional points for the user.
        If you\'re answering quiz, you should also use \"Reward\". Because Reward in the Quiz section gives 30 points.
        <b><p/>Note that: </b>Reward in Quiz section comes in every 3 minutes after watching!.
    </string>
    <string name="adNotLoaded">
        Ad couldn\'t be loaded right now. Please try again sometimes later.
    </string>
    <string name="rewardTimer">
        00:00
    </string>
    <string name="user_notice_header">
        User\'s Personalized Notice
    </string>
    <string name="user_notice_body">
        This section is only used for sending messages to the user of Geeks Job from \"Defender Studio\".
        When you win, you\'ll get your messages in this block. Thanks for using Geeks Job.
    </string>
    <string name="user_position">position</string>
    <string name="user_image">Users Image</string>
    <string name="app_logo">App Logo</string>
    <string name="third">3rd</string>
    <string name="second">2nd</string>
    <string name="first">1st</string>
    <string name="second_image">Second Image</string>
    <string name="first_image">First Image</string>
    <string name="third_image">Third Image</string>
    <string name="text">Text</string>
    <string name="day_timer">00:00:00</string>
    <string name="tournament">Tournament</string>
    <string name="university">University</string>
</resources>