<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notice_board_background"
    android:orientation="vertical"
    tools:context=".CommunityGroup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/community_group_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:fontFamily="@font/geeks_job_medium"
                android:gravity="center"
                android:text="@string/community_group"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/header_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:fontFamily="@font/geeks_job_medium"
                android:gravity="center"
                android:text="@string/group_chat_text"
                android:textColor="@color/orange" />


            <TextView
                android:id="@+id/facebook_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:fontFamily="@font/geeks_job_medium"
                android:gravity="center"
                android:text="@string/facebook_link"
                android:linksClickable="true"
                android:textColor="@color/green" />


            <TextView
                android:id="@+id/telegram_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:fontFamily="@font/geeks_job_medium"
                android:gravity="center"
                android:text="@string/telegram_link"
                android:linksClickable="true"
                android:textColor="@color/green" />


            <TextView
                android:id="@+id/footer_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:fontFamily="@font/geeks_job_medium"
                android:gravity="center"
                android:text="@string/tail_text"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/youtube_link"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:fontFamily="@font/geeks_job_medium"
                android:gravity="center"
                android:text="@string/youtube_link"
                android:textColor="@color/green" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>