<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notice_board_background"
    android:orientation="vertical"
    tools:context=".Rewards">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight=".6"
        android:elevation="5dp"
        android:translationZ="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rewards_text_view_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/orange"
                android:textSize="70sp"
                android:fontFamily="@font/geeks_job_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".7"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/chance"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/geeks_job_regular"/>

                <TextView
                    android:id="@+id/chancesLeft"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:gravity="center"
                    android:text="@string/twenty"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/geeks_job_regular"/>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7">

            <Button
                android:id="@+id/rewardedAdButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="5dp"
                android:text="@string/watch_ad"
                android:textSize="30sp"
                android:translationZ="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/geeks_job_regular"/>
        </LinearLayout>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:layout_weight=".3"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/ripple_white"
                android:layout_margin="10dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/ic_baseline_timer_128"
                    android:backgroundTint="@color/orange"/>

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:text="@string/timer"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>



        </androidx.cardview.widget.CardView>


    </LinearLayout>
</LinearLayout>