<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/notice_board_background"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    tools:ignore="Nested"
    tools:targetApi="o">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/religion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="20dp"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:clickable="true"
            android:focusable="true"
            android:tooltipText="@string/religion"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/religion_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:textSize="22sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/religion"
                    android:gravity="center"
                    android:textColor="#9a9a9a"
                    android:fontFamily="@font/geeks_job_medium"/>

                <ImageView
                    android:contentDescription="@string/religion"
                    android:id="@+id/religion_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/angel"/>

            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/science"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7.5dp"
            android:layout_weight=".66"
            android:elevation="10dp"
            android:translationZ="10dp"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:focusable="true"
            android:tooltipText="@string/science_and_history"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/science_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/science"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/medicallaboratory"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/science_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/geeks_job_medium"
                        android:text="@string/science"
                        android:textSize="22sp"
                        android:textColor="#9a9a9a" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and_symbol"
                    android:layout_gravity="center"
                    android:textSize="40sp"
                    android:textColor="#9a9a9a"
                    android:fontFamily="@font/geeks_job_medium"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/history"
                        android:id="@+id/history_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/history"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/history_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22sp"
                        android:text="@string/history"
                        android:layout_gravity="center"
                        android:fontFamily="@font/geeks_job_medium"
                        android:textColor="#9a9a9a"/>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:layout_marginTop="7.5dp"
            android:layout_marginBottom="7.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="20dp"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:id="@+id/curriculum"
            android:clickable="true"
            android:focusable="true"
            android:tooltipText="@string/curriculum"
            android:foreground="?android:attr/selectableItemBackground">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal">

           <ImageView
               android:id="@+id/curriculum_image"
               android:layout_width="100dp"
               android:layout_height="100dp"
               android:layout_marginStart="30dp"
               android:layout_marginEnd="5dp"
               android:contentDescription="@string/curriculum"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/cv"
               android:layout_gravity="center"/>

           <TextView
               android:id="@+id/curriculum_text"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_marginStart="5dp"
               android:layout_marginEnd="10dp"
               android:layout_weight=".5"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:text="@string/curriculum"
               android:gravity="center"
               android:textSize="22sp"
               android:fontFamily="@font/geeks_job_medium"
               android:textColor="#9a9a9a"/>

       </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/movies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight=".66"
            android:elevation="10dp"
            android:translationZ="10dp"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:focusable="true"
            android:tooltipText="@string/movies_and_sports"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/movies"
                        android:id="@+id/movies_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/clapperboard"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/movies_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movies"
                        android:layout_gravity="center"
                        android:fontFamily="@font/geeks_job_medium"
                        android:textSize="22sp"
                        android:textColor="#9a9a9a"/>


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/and_symbol"
                    android:layout_gravity="center"
                    android:textSize="40sp"
                    android:textColor="#9a9a9a"
                    android:fontFamily="@font/geeks_job_medium"/>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageView
                        android:contentDescription="@string/sports"
                        android:id="@+id/sports_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/sports"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/sports_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sports"
                        android:layout_gravity="center"
                        android:fontFamily="@font/geeks_job_medium"
                        android:textSize="22sp"
                        android:textColor="#9a9a9a"/>

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>